--- a/public/www/index.html
+++ b/public/www/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>카카오같이가치</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/reset-css@4.0.1/reset.min.css"
+    />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
   </head>
   <body>
     <!-- 전체 레이아웃 -->
@@ -12,7 +20,7 @@
       <!-- 상단 레이아웃 -->
       <div class="header">
         <div class="inner">
-          <div class="header-logo"></div>
+          <div class="header-logo">테스트용</div>
           <div class="header-menu"></div>
           <div class="header-navi"></div>
         </div>
