--- a/public/www/index.html
+++ b/public/www/index.html
@@ -56,13 +56,35 @@
       <!-- 하단 레이아웃 -->
       <div class="footer">
         <div class="inner">
-          <div class="footer-top-info"></div>
-          <div class="footer-bottom">
-            <div class="footer-sns"></div>
-            <div class="footer-copyright"></div>
+          <!-- 회사 소개 -->
+          <div class="footer-top-info">
+            <a href="#" class="footer-logo">
+              <img src="./images/footer/footer_logo_black.svg" alt="카카오같이가치" />
+            </a>
+            <p class="footer-top-info-desc">
+              카카오같이가치는 카카오와 카카오임팩트가 함께합니다.
+            </p>
+          </div>
+            <!-- 카피라이터 및 사이트 맵  -->
+         <div class="footer-bottom">
+            <ul>
+              <li>© Kakao Corp.</li>
+              <li>고객센터</li>
+              <li>문의하기</li>
+              <li>이용약관</li>
+              <li>개인정보처리방침</li>
+            </ul>
+            <!-- SNS 목록 -->
+           <div class="footer-sns">
+            <ul class="sns-list">
+              <li><a href="#"><img src="./images/footer/footer_kakaotalk_gray80.svg" alt="">
+              </a></li>
+              <li><a href="#"><img src="./images/footer/footer_kakaotalk_gray80.svg" alt=""></a></li>
+              <li><a href="#"><img src="./images/footer/footer_instagram_gray80.svg" alt=""></a></li>
+            </ul>
           </div>
         </div>
-      </div>
+
     </div>
   </body>
 </html>
