레이아웃과 css 작업 중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/mainbottom.css">
     <link rel="stylesheet" href="./css/footer.css" />
+
   </head>
   <body>
     <!-- 전체 레이아웃 -->
@@ -40,12 +42,16 @@
           <div class="main-banner"></div>
           <!-- 메인 하단 -->
           <div class="main-bottom">
-            <div class="main-bottom-banner"></div>
-            <div class="main-bottom-banner"></div>
-            <div class="main-bottom-banner"></div>
-            <div class="main-bottom-banner"></div>
-            <div class="main-bottom-banner"></div>
-            <div class="main-bottom-banner"></div>
+            <!-- 메인 하단 도네 6개 -->
+            <div class="main-bottom-banner">
+              <img src="./images/c1400x960 (1).jpg" alt="하단도네이미지">
+              <div class="main-bottom-contents">
+              <p class="main-bottom-tag"># 기본생활지원</p>
+              <p class="main-bottom-title">아이들에게 '따스한 봄'이 되어주세요.</p>
+              <p class="main-bottom-content">"할머니, 죄송해요..." 주호(가명)는 엄마, 아빠의 보살핌을 받지 못한 채 5살의 어린 나이에 할머니, 할아버지께 맡겨졌습니다.  할아버지는 전립선암 3기 진단으로 치료 중이며, 할머니는 당뇨를 비롯한 각종 질병에...</p>
+            </div>
+          </div>
+
           </div>
           <!-- 메인 우측 카드 영역 -->
           <div class="main-card">
@@ -87,12 +93,12 @@
             <ul class="sns-list">
               <li><a href="#"><img src="./images/footer/footer_kakaotalk_gray80.svg" alt="">
               </a></li>
-              <li><a href="#"><img src="./images/footer/footer_kakaotalk_gray80.svg" alt=""></a></li>
+              <li><a href="#"><img src="./images/footer/footer_facebook_gray80.svg" alt=""></a></li>
               <li><a href="#"><img src="./images/footer/footer_instagram_gray80.svg" alt=""></a></li>
             </ul>
           </div>
         </div>
-
+        </div>
     </div>
   </body>
 </html>
