feather: header mb 작업

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/reset-css@4.0.1/reset.min.css"
     />
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/font.css" />
+    <!-- <link rel="stylesheet" href="./css/font.css" /> -->
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/mainbottom.css">
@@ -22,7 +22,7 @@
     <!-- 전체 레이아웃 -->
     <div class="wrap">
       <!-- 상단 레이아웃 -->
-      <div class="header">
+      <header class="header">
         <div class="inner">
         <!-- 상단 로고 -->
           <div class="header-logo">
@@ -50,10 +50,37 @@
             </ul>
           </div>
         </div>
+      </header>
+      <!-- 모바일 메뉴 -->
+      <div class="mb-header-bg">
+        <div class="mb-header-menu">
+          <div class="mb-nav">
+            <div class="mb-login">
+              <div class="mb-login-img"></div>
+              <div class="mb-login-text">로그인하세요</div>
+            </div>
+            <ul class="mb-login-bt">
+              <li><a href="#">MY</a></li>
+              <li><a href="#"><span>|</span></a></li>
+              <li><a href="#">알림</a></li>
+            </ul>
+            <ul class="mb-list">
+              <li><a href="#">같이기부</a></li>
+              <li><a href="#">모두의행동</a></li>
+              <li><a href="#">마음날씨</a></li>
+              <li><a href="#">캠페인</a></li>
+            </ul>
+            <ul>
+              <li class="mb-info"><a href="#">가치같이소개</a></li>
+            </ul>
+            
+          </div>
+        </div>
       </div>
+      
 
       <!-- 메인 레이아웃 -->
-      <div class="main">
+      <main class="main">
         <div class="inner">
           <!-- 메인 상단 -->
           <div class="main-top">
@@ -245,10 +272,10 @@
             <div class="news"></div>
           </div>
         </div>
-      </div>
+      </main>
 
       <!-- 하단 레이아웃 -->
-      <div class="footer">
+      <footer class="footer">
         <div class="inner">
           <!-- 회사 소개 -->
           <div class="footer-top-info">
@@ -279,7 +306,7 @@
           </div>
         </div>
        </div>
-      </div>
+      </footer>
     </div>
   </body>
 </html>
