mainbottom과 footer 작업 중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -222,18 +222,107 @@
           <div class="main-banner"></div>
           <!-- 메인 하단 -->
           <div class="main-bottom">
-            <!-- 메인 하단 도네 6개 -->
-            <div class="main-bottom-banner">
-              <img src="./images/c1400x960 (1).jpg" alt="하단도네이미지">
-              <div class="main-bottom-contents">
-              <p class="main-bottom-tag"># 기본생활지원</p>
-              <p class="main-bottom-title">아이들에게 '따스한 봄'이 되어주세요.</p>
-              <p class="main-bottom-content">"할머니, 죄송해요..." 주호(가명)는 엄마, 아빠의 보살핌을 받지 못한 채 5살의 어린 나이에 할머니, 할아버지께 맡겨졌습니다.  할아버지는 전립선암 3기 진단으로 치료 중이며, 할머니는 당뇨를 비롯한 각종 질병에...</p>
-            </div>
+            <div class="main-bottom-inner">
+              <!-- 메인 하단 도네 6개 -->
+              <div class="main-bottom-banner">
+                <a href="#" >
+                  <div class="main-bottom-img"></div>
+                </a>
+                  <div class="main-bottom-contents">
+                    <div class="main-bottom-tag">
+                      <p># 기본생활지원</p></div>
+                      <div class="main-bottom-title"><p>아이들에게 '따스한 봄'이 되어주세요.</p></div>
+                      <div class="main-bottom-content"><p>"할머니, 죄송해요..." 주호(가명)는 엄마, 아빠의 보살핌을 받지 못한 채 5살의 어린 나이에 할머니, 할아버지께 맡겨졌습니다.  할아버지는 전립선암 3기 진단으로 치료 중이며...</p></div>
+                    <div class="main-bottom-time-bar"></div>
+                    <div class="main-bottom-time-percent">
+                      <span>160,500원</span>
+                      <p>11%</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="main-bottom-banner">
+                <a href="#" >
+                  <div class="main-bottom-img"></div>
+                </a>
+                  <div class="main-bottom-contents">
+                    <div class="main-bottom-tag">
+                      <p># 마을만들기</p></div>
+                      <div class="main-bottom-title"><p>홀로 사는 어르신들에게 이웃이 되어주세요!</p></div>
+                      <div class="main-bottom-content"><p>"할머니, 죄송해요..." 주호(가명)는 엄마, 아빠의 보살핌을 받지 못한 채 5살의 어린 나이에 할머니, 할아버지께 맡겨졌습니다.  할아버지는 전립선암 3기 진단으로 치료 중이며...</p></div>
+                    <div class="main-bottom-time-bar"></div>
+                    <div class="main-bottom-time-percent">
+                      <span>160,500원</span>
+                      <p>11%</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="main-bottom-banner">
+                <a href="#" >
+                  <div class="main-bottom-img"></div>
+                </a>
+                  <div class="main-bottom-contents">
+                    <div class="main-bottom-tag">
+                      <p># 기본생활지원</p></div>
+                      <div class="main-bottom-title"><p>아이들에게 '따스한 봄'이 되어주세요.</p></div>
+                      <div class="main-bottom-content"><p>"할머니, 죄송해요..." 주호(가명)는 엄마, 아빠의 보살핌을 받지 못한 채 5살의 어린 나이에 할머니, 할아버지께 맡겨졌습니다.  할아버지는 전립선암 3기 진단으로 치료 중이며...</p></div>
+                    <div class="main-bottom-time-bar"></div>
+                    <div class="main-bottom-time-percent">
+                      <span>160,500원</span>
+                      <p>11%</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="main-bottom-banner">
+                <a href="#" >
+                  <div class="main-bottom-img"></div>
+                </a>
+                  <div class="main-bottom-contents">
+                    <div class="main-bottom-tag">
+                      <p># 더나은사회</p></div>
+                      <div class="main-bottom-title"><p>아이들의 난생처음 제주도 여행!</p></div>
+                      <div class="main-bottom-content"><p>"할머니, 죄송해요..." 주호(가명)는 엄마, 아빠의 보살핌을 받지 못한 채 5살의 어린 나이에 할머니, 할아버지께 맡겨졌습니다.  할아버지는 전립선암 3기 진단으로 치료 중이며...</p></div>
+                    <div class="main-bottom-time-bar"></div>
+                    <div class="main-bottom-time-percent">
+                      <span>160,500원</span>
+                      <p>11%</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="main-bottom-banner">
+                <a href="#" >
+                  <div class="main-bottom-img"></div>
+                </a>
+                  <div class="main-bottom-contents">
+                    <div class="main-bottom-tag">
+                      <p># 멸종위기종</p></div>
+                      <div class="main-bottom-title"><p>자동심장충격기로 골든타임을 지켜주세요</p></div>
+                      <div class="main-bottom-content"><p>"할머니, 죄송해요..." 주호(가명)는 엄마, 아빠의 보살핌을 받지 못한 채 5살의 어린 나이에 할머니, 할아버지께 맡겨졌습니다.  할아버지는 전립선암 3기 진단으로 치료 중이며...</p></div>
+                    <div class="main-bottom-time-bar"></div>
+                    <div class="main-bottom-time-percent">
+                      <span>160,500원</span>
+                      <p>11%</p>
+                    </div>
+                  </div>
+              </div>
+              <div class="main-bottom-banner">
+                <a href="#" >
+                  <div class="main-bottom-img"></div>
+                </a>
+                  <div class="main-bottom-contents">
+                    <div class="main-bottom-tag">
+                      <p># 대구시</p></div>
+                      <div class="main-bottom-title"><p>텅 빈 동네에 서 있으면 혼자 남은 느낌이야</p></div>
+                      <div class="main-bottom-content"><p>"할머니, 죄송해요..." 주호(가명)는 엄마, 아빠의 보살핌을 받지 못한 채 5살의 어린 나이에 할머니, 할아버지께 맡겨졌습니다.  할아버지는 전립선암 3기 진단으로 치료 중이며...</p></div>
+                    <div class="main-bottom-time-bar"></div>
+                    <div class="main-bottom-time-percent">
+                      <span>160,500원</span>
+                      <p>11%</p>
+                    </div>
+                  </div>
+              </div>
           </div>
-
-          </div>
-          <!-- 메인 우측 카드 영역 -->
+        </div>
+        <!-- 메인 우측 카드 영역 -->
           <div class="main-card">
             <!-- 카드 슬라이드 -->
             <div class="card-slide"></div>
@@ -244,7 +333,7 @@
             <!-- 뉴스 -->
             <div class="news"></div>
           </div>
-        </div>
+
       </div>
 
       <!-- 하단 레이아웃 -->
@@ -261,13 +350,19 @@
           </div>
             <!-- 카피라이터 및 사이트 맵  -->
          <div class="footer-bottom">
+            <div class="footer-sitemap">
             <ul>
               <li>© Kakao Corp.</li>
+              <li class="dot">•</li>
               <li>고객센터</li>
+              <li class="dot">•</li>
               <li>문의하기</li>
+              <li class="dot">•</li>
               <li>이용약관</li>
-              <li>개인정보처리방침</li>
+              <li class="dot">•</li>
+              <li><a>개인정보처리방침</a></li>
             </ul>
+            </div>
             <!-- SNS 목록 -->
            <div class="footer-sns">
             <ul class="sns-list">
