docs: div 위치 수정

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -60,12 +60,12 @@
               <div class="mb-login-text">로그인하세요</div>
             </div>
             <ul class="mb-login-bt">
-              <li><a href="#">MY</a></li>
+              <li><a href="#"><img src="./images/side/ico_side_my.svg" alt=""> MY</a></li>
               <li><a href="#"><span>|</span></a></li>
               <li><a href="#">알림</a></li>
             </ul>
             <ul class="mb-list">
-              <li><a href="#">같이기부</a></li>
+              <li><a href="#"><img src="./images/side/ico_side_campaign.svg" alt=""> 같이기부</a></li>
               <li><a href="#">모두의행동</a></li>
               <li><a href="#">마음날씨</a></li>
               <li><a href="#">캠페인</a></li>
@@ -79,8 +79,8 @@
       </div>
       
 
-      <!-- 메인 레이아웃 -->
-      <main class="main">
+    <!-- 메인 레이아웃 -->
+    <main class="main">
         <div class="inner">
           <!-- 메인 상단 -->
           <div class="main-top">
@@ -244,7 +244,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          <!-- </div> -->
           <!-- 메인 중간 배너 영역 -->
           <div class="main-banner"></div>
           <!-- 메인 하단 -->
@@ -348,7 +348,7 @@
                   </div>
               </div>
           </div>
-        </div>
+          </div>
         <!-- 메인 우측 카드 영역 -->
           <div class="main-card">
             <!-- 카드 슬라이드 -->
@@ -361,11 +361,10 @@
             <div class="news"></div>
           </div>
       </div>
-     </div>
     </main>
 
-      <!-- 하단 레이아웃 -->
-      <footer class="footer">
+    <!-- 하단 레이아웃 -->
+    <footer class="footer">
         <div class="inner">
           <!-- 회사 소개 -->
           <div class="footer-top-info">
@@ -402,7 +401,7 @@
           </div>
         </div>
        </div>
-      </footer>
+    </footer>
     </div>
   </body>
 </html>
