--- a/public/www/index.html
+++ b/public/www/index.html
@@ -64,7 +64,6 @@
 
            <!-- 버튼 수정 필요 -->
             <ul class="mb-login-bt">
-              <li><a href="#">MY</a></li>
               <li>
                 <a href="#"><img src="./images/side/ico_side_my.svg" alt=""></a>
                 <a href="#">MY</a>
@@ -75,10 +74,6 @@
               </li>
             </ul>
             <ul class="mb-list">
-              <li><a href="#">같이기부</a></li>
-              <li><a href="#">모두의행동</a></li>
-              <li><a href="#">마음날씨</a></li>
-              <li><a href="#">캠페인</a></li>
               <li><a href="#"><img src="./images/side/ico_side_fundraising.svg" alt="같이기부"></a>
               <a href="#">같이기부</a></li>
               <li><a href="#"><img src="./images/side/ico_side_action.svg" alt="모두의행동"></a>
@@ -89,10 +84,14 @@
               <a href="#">캠페인</a></li>
             </ul>
             <ul class="mb-info">
-              <li class="mb-info-top"><a href="#">같이가치 소개</a></li>
-              <li class="mb-info-top"><a href="#">매거진</a></li>
-              <li class="mb-info-bottom"><a href="#">공지사항</a></li>
-              <li class="mb-info-bottom"><a href="#">모금제안</a></li>
+              <li class="mb-info-top">
+                <a href="#">같이가치 소개</a>
+                <a href="#">공지사항</a>
+              </li>
+              <li class="mb-info-bottom">
+                <a href="#">매거진</a>
+                <a href="#">모금제안</a>
+              </li>
             </ul>
             
           </div>
