우측 배너 진행 중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -389,10 +389,11 @@
                     </div>
                   </div>
               </div>
-          </div>
+            </div>
           </div>
         <!-- 메인 우측 카드 영역 -->
-          <div class="main-card">
+        <div class="main-card">
+          <div class="main-card-top">
             <!-- 카드 상단 -->
             <div class="card-slide">
               <a href="#">
@@ -403,10 +404,12 @@
                 <p class="money-date">2024.05.08 기준</p>
               </div>
               <div class="money-total">
+                <div class="money-total-title">
                   <a href="#">
                     <div class="money-total-icon"></div>
                   </a>
-                  <p>총 기부금</p>
+                  <h4>총 기부금</h4>
+                </div>
                   <p>74,304,097,307원</p>
               </div>
             </div>
@@ -416,20 +419,29 @@
                 <p>따뜻한 후기</p>
               </div>
               <div class="review-title">
-                <p>역사상 최악의 지진 그리고 희망의 손길</p>
+                <p>25명 다국적 청년의 나눔 활동!</p>
               </div>
               <div class="review-content">
-                <p>2023년 2월 6일 튀르키예 가지안테프와 카하르만마라슈 지역에서 강도 7.5 이상의 강진이 두 차례 발생했습니다. 이 지진으로 시리아에서만 5,670명의 사망자가 발생했으며, 265,000명의 이재민이 발생했습니다. 역대 최고 수준의 강진으로 인하여 시리아의 아동들은 </p>
+                <p>1월의 필리핀 나바스는 한국의 초여름처럼 날씨가 매우 좋았습니다. 마을에서는 우리 나눔단을 맞이하기 위하여 마을 청소를 대대적(?)으로 진행했다고 합니다. 현지에서 돕고 있는 한인 동포분의 요청 대로 구강교육과 성교육, 그리고 나눔단</p>
               </div>
             </div>
+          </div>
             <!-- 작은 배너 -->
-            <div class="small-banner"></div>
+            <div class="small-banner">
+              <a href="#">
+                <div class="small-banner-img"></div>
+              </a>
+              <div class="small-banner-content">
+                <h2>마지막까지<br>기다리고 있어요!</h2>
+                <p>종료임박 모금함 ></p>
+              </div>
+            </div>
             <!-- 마음 날씨 -->
             <div class="weather"></div>
             <!-- 뉴스 -->
             <div class="news"></div>
-          </div>
-      </div>
+        </div>
+    </div>
      </div>
     </main>
 
