우측 카드 영역과 하단 작업 중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -440,9 +440,50 @@
                 </div>
               </div>
               <!-- 마음 날씨 -->
-              <div class="weather"></div>
+              <div class="weather">
+                <div class="weather-title">
+                  <p>오늘 너의 마음날씨는 어때?</p>
+                </div>
+                <div class="weather-list">
+                  <ul>
+                    <li>
+                      <img src="./images/img (1).png" alt="마음날씨 이미지">
+                      <div class="weather-content">
+                        <a>나의 삶의 전략은?</a>
+                        <span>33,488명 참여</span>
+                      </div>
+                    </li>
+                    <li>
+                      <img src="./images/img (2).png" alt="마음날씨 이미지">
+                      <div class="weather-content">
+                        <a>만일, 내가 탐험가라면?</a>
+                        <span>30,235명 참여</span>
+                      </div>
+                    </li>
+                    <li>
+                      <img src="./images/img (3).png" alt="마음날씨 이미지">
+                      <div class="weather-content">
+                        <a>나의 식습관 알아보기</a>
+                        <span>57,376명 참여</span>
+                      </div>
+                    </li>
+                    <li>
+                      <img src="./images/img.png" alt="마음날씨 이미지">
+                      <div class="weather-content">
+                        <a>나의 행복소비 유형</a>
+                        <span>43,203명 참여</span>
+                      </div>
+                    </li>
+                    
+                  </ul>
+                </div>
+              </div>
               <!-- 뉴스 -->
-              <div class="news"></div>
+              <div class="news">
+                <div class="news-title">
+                  <p>놓치면 아까운 같이가치 소식</p>
+                </div>
+              </div>
               </div>
           </div>
         </div>
@@ -491,6 +532,9 @@
               <li><a href="#"><img src="./images/footer/footer_facebook_gray80.svg" alt=""></a></li>
               <li><a href="#"><img src="./images/footer/footer_instagram_gray80.svg" alt=""></a></li>
             </ul>
+          </div>
+          <div class="footer-copy-media">
+            <li class="corp-media">© Kakao Corp.</li>
           </div>
         </div>
        </div>
