우측 배너 카드 영역

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -482,6 +482,24 @@
                 <div class="news-title">
                   <p>놓치면 아까운 같이가치 소식</p>
                 </div>
+                <ul class="news-contents">
+                  <li>
+                    <p>제목</p>
+                    <img src="./images/ico_arrow_inverted.png" alt="화살표아이콘">
+                  </li>
+                  <li>
+                    <p>제목</p>
+                    <img src="./images/ico_arrow_inverted.png" alt="화살표아이콘">
+                  </li>
+                  <li>
+                    <p>제목</p>
+                    <img src="./images/ico_arrow_inverted.png" alt="화살표아이콘">
+                  </li>
+                  <li>
+                    <p>제목</p>
+                    <img src="./images/ico_arrow_inverted.png" alt="화살표아이콘">
+                  </li>
+                </ul>
               </div>
               </div>
           </div>
