featuer: 헤더 반응형 진행중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -34,7 +34,8 @@
         <!-- 상단 메뉴 -->
           <div class="header-menu">
             <ul class="menu-list">
-              <li><a href="#">홈</a></li>
+              <!-- 아래 선 위해서 임시로 class명 주었음 -->
+              <li class="menu-list-home"><a href="#">홈</a></li>
               <li><a href="#">매달기부</a></li>
               <li><a href="#">같이기부</a></li>
               <li><a href="#">모두의행동</a></li>
@@ -116,54 +117,59 @@
                     <a href="#">
                       <div class="dona-contain-img"></div>
                     </a>
-                    <div class="dona-contain-text">
-                      <p>준수가 답답한 마음을 말할 수 있게 도와주세요.</p>
-                    </div>
-                    <div class="dona-contain-subtext">
-                      <p>사회복지법인 어린이재단</p>
-                    </div>
-                    <div class="dona-bar"></div>
-                    <div class="dona-percent">
-                      <p>2,883,055원</p>
-                      <span>74%</span>
-                    </div>
-                  </div>
-                  
-                  <div class="dona-contain">
-                    <a href="#">
-                      <div class="dona-contain-img"></div>
-                    </a>
-                    <div class="dona-contain-text">
-                      <p>생리대 걱정 없이 학교에 다니고 싶어요...</p>
-                    </div>
-                    <div class="dona-contain-subtext">
-                      <p>전주장애인종합복지관</p>
-                    </div>
-                    <div class="dona-bar"></div>
-                    <div class="dona-percent">
-                      <p>2,883,055원</p>
-                      <span>74%</span>
+                    <div class="dona-contain-dec">
+                      <div class="dona-contain-text">
+                        <p>준수가 답답한 마음을 말할 수 있게 도와주세요.</p>
+                      </div>
+                      <div class="dona-contain-subtext">
+                        <p>사회복지법인 어린이재단</p>
+                      </div>
+                      <div class="dona-bar"></div>
+                      <div class="dona-percent">
+                        <p>2,883,055원</p>
+                        <span>74%</span>
+                      </div>
                     </div>
                   </div>
                   <div class="dona-contain">
                     <a href="#">
                       <div class="dona-contain-img"></div>
                     </a>
-                    <div class="dona-contain-text">
-                      <p>살아남기 위하여 고향을 떠나는 아이티 주민들을 도와주세요</p>
+                    <div class="dona-contain-dec">
+                      <div class="dona-contain-text">
+                        <p>생리대 걱정 없이 학교에 다니고 싶어요...</p>
+                      </div>
+                      <div class="dona-contain-subtext">
+                        <p>전주장애인종합복지관</p>
+                      </div>
+                      <div class="dona-bar"></div>
+                      <div class="dona-percent">
+                        <p>2,883,055원</p>
+                        <span>74%</span>
+                      </div>
                     </div>
-                    <div class="dona-contain-subtext">
-                      <p>사회복지법인 월드비전</p>
-                    </div>
-                    <div class="dona-bar"></div>
-                    <div class="dona-percent">
-                      <p>2,883,055원</p>
-                      <span>74%</span>
+                  </div>
+                  <div class="dona-contain">
+                    <a href="#">
+                      <div class="dona-contain-img"></div>
+                    </a>
+                    <div class="dona-contain-dec">
+                      <div class="dona-contain-text">
+                        <p>살아남기 위하여 고향을 떠나는 아이티 주민들을 도와주세요</p>
+                      </div>
+                      <div class="dona-contain-subtext">
+                        <p>사회복지법인 월드비전</p>
+                      </div>
+                      <div class="dona-bar"></div>
+                      <div class="dona-percent">
+                        <p>2,883,055원</p>
+                        <span>74%</span>
+                      </div>
                     </div>
                   </div>
                 </div>
-                
               </div>
+
               <!-- 메인 상단 시간 -->
               <div class="main-top-dona-time">
                 <div class="dona-title">
