--- a/public/www/index.html
+++ b/public/www/index.html
@@ -124,7 +124,9 @@
                       <div class="dona-contain-subtext">
                         <p>사회복지법인 어린이재단</p>
                       </div>
-                      <div class="dona-bar"></div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                       <div class="dona-percent">
                         <p>2,883,055원</p>
                         <span>74%</span>
@@ -142,7 +144,9 @@
                       <div class="dona-contain-subtext">
                         <p>전주장애인종합복지관</p>
                       </div>
-                      <div class="dona-bar"></div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                       <div class="dona-percent">
                         <p>2,883,055원</p>
                         <span>74%</span>
@@ -160,7 +164,9 @@
                       <div class="dona-contain-subtext">
                         <p>사회복지법인 월드비전</p>
                       </div>
-                      <div class="dona-bar"></div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                       <div class="dona-percent">
                         <p>2,883,055원</p>
                         <span>74%</span>
@@ -230,7 +236,9 @@
                     <div class="dona-contain-subtext">
                       <p>수원시 광교 노인복지관</p>
                     </div>
-                    <div class="dona-bar"></div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                     <div class="dona-percent">
                       <p>2,883,055원</p>
                       <span>74%</span>
@@ -246,7 +254,9 @@
                     <div class="dona-contain-subtext">
                       <p>도영재가노인지원서비스센터</p>
                     </div>
-                    <div class="dona-bar"></div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                     <div class="dona-percent">
                       <p>2,883,055원</p>
                       <span>74%</span>
@@ -262,7 +272,9 @@
                     <div class="dona-contain-subtext">
                       <p>청주시독거노인통합지원센터</p>
                     </div>
-                    <div class="dona-bar"></div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                     <div class="dona-percent">
                       <p>2,883,055원</p>
                       <span>74%</span>
