우측 card 반응형 수정 중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -124,7 +124,9 @@
                       <div class="dona-contain-subtext">
                         <p>사회복지법인 어린이재단</p>
                       </div>
-                      <div class="dona-bar"></div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                       <div class="dona-percent">
                         <p>2,883,055원</p>
                         <span>74%</span>
@@ -142,7 +144,9 @@
                       <div class="dona-contain-subtext">
                         <p>전주장애인종합복지관</p>
                       </div>
-                      <div class="dona-bar"></div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                       <div class="dona-percent">
                         <p>2,883,055원</p>
                         <span>74%</span>
@@ -160,7 +164,9 @@
                       <div class="dona-contain-subtext">
                         <p>사회복지법인 월드비전</p>
                       </div>
-                      <div class="dona-bar"></div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                       <div class="dona-percent">
                         <p>2,883,055원</p>
                         <span>74%</span>
@@ -177,6 +183,7 @@
                   <span class="dona-sub">망설이면 끝! 조금만 더 힘을 보태주세요.</span>
                 </div>
                 <div class="time-contain">
+                  <div class="time-contain-count"></div>
                   <a href="#">
                     <div class="time-contain-img"></div>
                   </a>
@@ -224,48 +231,60 @@
                     <a href="#">
                       <div class="dona-contain-img"></div>
                     </a>
-                    <div class="dona-contain-text">
-                      <p>숨막히는 폭염, 다가오는 걱정 소나기 키트를 선물해주세요!</p>
-                    </div>
-                    <div class="dona-contain-subtext">
-                      <p>수원시 광교 노인복지관</p>
-                    </div>
-                    <div class="dona-bar"></div>
-                    <div class="dona-percent">
-                      <p>2,883,055원</p>
-                      <span>74%</span>
-                    </div>
-                  </div>
-                  <div class="dona-contain">
-                    <a href="#">
-                      <div class="dona-contain-img"></div>
-                    </a>
-                    <div class="dona-contain-text">
-                      <p>나홀로 어르신을 위한 조금 특별한 선물 시즌4</p>
-                    </div>
-                    <div class="dona-contain-subtext">
-                      <p>도영재가노인지원서비스센터</p>
-                    </div>
-                    <div class="dona-bar"></div>
-                    <div class="dona-percent">
-                      <p>2,883,055원</p>
-                      <span>74%</span>
+                    <div class="dona-contain-dec">
+                      <div class="dona-contain-text">
+                        <p>숨막히는 폭염, 다가오는 걱정 소나기 키트를 선물해주세요!</p>
+                      </div>
+                      <div class="dona-contain-subtext">
+                        <p>수원시 광교 노인복지관</p>
+                      </div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <div class="dona-percent">
+                        <p>2,883,055원</p>
+                        <span>74%</span>
+                      </div>
                     </div>
                   </div>
                   <div class="dona-contain">
                     <a href="#">
                       <div class="dona-contain-img"></div>
                     </a>
-                    <div class="dona-contain-text">
-                      <p>가정의 달, 홀몸 어르신께 건강을 선물해孝!</p>
+                    <div class="dona-contain-dec">
+                      <div class="dona-contain-text">
+                        <p>나홀로 어르신을 위한 조금 특별한 선물 시즌4</p>
+                      </div>
+                      <div class="dona-contain-subtext">
+                        <p>도영재가노인지원서비스센터</p>
+                      </div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <div class="dona-percent">
+                        <p>2,883,055원</p>
+                        <span>74%</span>
+                      </div>
                     </div>
-                    <div class="dona-contain-subtext">
-                      <p>청주시독거노인통합지원센터</p>
-                    </div>
-                    <div class="dona-bar"></div>
-                    <div class="dona-percent">
-                      <p>2,883,055원</p>
-                      <span>74%</span>
+                  </div>
+                  <div class="dona-contain">
+                    <a href="#">
+                      <div class="dona-contain-img"></div>
+                    </a>
+                    <div class="dona-contain-dec">
+                      <div class="dona-contain-text">
+                        <p>가정의 달, 홀몸 어르신께 건강을 선물해孝!</p>
+                      </div>
+                      <div class="dona-contain-subtext">
+                        <p>청주시독거노인통합지원센터</p>
+                      </div>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 74%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <div class="dona-percent">
+                        <p>2,883,055원</p>
+                        <span>74%</span>
+                      </div>
                     </div>
                   </div>
                 </div>
