메인 상단 반응형 진행중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -183,9 +183,10 @@
                   <span class="dona-sub">망설이면 끝! 조금만 더 힘을 보태주세요.</span>
                 </div>
                 <div class="time-contain">
-                  <div class="time-contain-count"></div>
                   <a href="#">
-                    <div class="time-contain-img"></div>
+                    <div class="time-contain-img">
+                      <div class="time-contain-count"></div>
+                    </div>
                   </a>
                 <div class="time-contain-text">
                     <a href="#">
