메인 상단 시간 반응형 진행중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -185,7 +185,7 @@
                 <div class="time-contain">
                   <a href="#">
                     <div class="time-contain-img">
-                      <div class="time-contain-count"></div>
+                      <div class="time-contain-count">47:31:05</div>
                     </div>
                   </a>
                 <div class="time-contain-text">
