메인 상단 시간 반응형 진행중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -183,6 +183,7 @@
                   <span class="dona-sub">망설이면 끝! 조금만 더 힘을 보태주세요.</span>
                 </div>
                 <div class="time-contain">
+                  <div class="time-contain-count-ts"></div>
                   <a href="#">
                     <div class="time-contain-img">
                       <div class="time-contain-count">47:31:05</div>
